[package]
name = "num-decimal"
version = "0.2.5"
edition = "2018"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/num-decimal"
repository = "https://github.com/d-e-s-o/num-decimal.git"
readme = "README.md"
description = """
Infinite precision decimals with fair rounding and other gimmicks based
on num-rational.
"""
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
no-default-features = true
features = ["num-v04", "serde"]

[[bench]]
name = "ser"
required-features = ["serde"]

[features]
default = ["num-v02"]
num-v02 = ["num-bigint-v02", "num-rational-v02"]
num-v04 = ["num-bigint-v04", "num-rational-v04"]

[dependencies]
num-bigint-v02 = {version = "0.2", package = "num-bigint", optional = true}
num-rational-v02 = {version = "0.2", package = "num-rational", optional = true}
num-bigint-v04 = {version = "0.4", package = "num-bigint", optional = true}
num-rational-v04 = {version = "0.4", package = "num-rational", optional = true}
num-traits = "0.2"
serde = {version = "1.0", default-features = false, features = ["derive"], optional = true}

[dev-dependencies]
bincode = {version = "1.3", default-features = false}
serde_json = {version = "1.0", default-features = false, features = ["std"]}
